syntax = "proto3";

option go_package = "github.com/RadisaMilovcevic/bsep_xws/microservices_demo/common/account";

package account;

import "google/api/annotations.proto";

service AccountService{
  rpc Get(GetRequest) returns(GetResponse) {
    option (google.api.http) = {
      get: "/account/{id}"
    };
  }
  rpc GetAll(GetAllRequest) returns(GetAllResponse) {
    option (google.api.http) = {
      get: "/account"
    };
  }

  rpc CreateAccount(CreateAccountRequest) returns(CreateAccountResponse) {
    option (google.api.http) = {
      post: "/account"
      body: "account"
    };
  }
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  Account account = 1;
}

message GetAllRequest {
}

message GetAllResponse {
  repeated Account accounts = 1;
}

message CreateAccountRequest {
  Account account = 1;
}

message CreateAccountResponse {
  Account account = 1;
}

message Account {
  string id = 1;
  string Username = 2;
  string Password = 3;
}
